<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/questionnaire_menuitem_partial_save"
        android:title="@string/menu_questionnaire_partial_save">
    </item>
    <item
        android:id="@+id/questionnaire_menuitem_change_language"
        android:title="@string/menu_questionnaire_change_language">
    </item>
    <item
        android:id="@+id/questionnaire_menuitem_show_refusals"
        android:title="@string/menu_questionnaire_show_refusals">
    </item>
    <item
        android:id="@+id/questionnaire_menuitem_review_notes"
        android:title="@string/menu_questionnaire_review_notes">
    </item>
    <item
        android:id="@+id/questionnaire_menuitem_end_group"
        android:title="@string/menu_questionnaire_end_group">
    </item>
    <item
        android:id="@+id/questionnaire_menuitem_end_level"
        android:title="@string/menu_questionnaire_end_level">
    </item>
    <item
        android:id="@+id/questionnaire_menuitem_advance_to_end"
        android:title="@string/menu_questionnaire_advance_to_end">
    </item>
    <item
        android:id="@+id/questionnaire_menuitem_previous_persistent"
        android:title="@string/menu_questionnaire_previous_persistent">
    </item>
    <item
        android:id="@+id/questionnaire_menuitem_toggle_nav_controls"
        android:title="@string/menu_questionnaire_hide_nav_controls">
    </item>
    <item
        android:id="@+id/questionnaire_menuitem_toggle_casetree"
        android:title="@string/menu_questionnaire_hide_casetree">
    </item>
    <item
        android:id="@+id/questionnaire_menuitem_userbar"
        android:icon="@drawable/ic_menu_moreoverflow"
        app:showAsAction="always"
        android:title="@string/menu_questionnaire_userbar"
        android:visible="false">
    </item>
    <item
        android:id="@+id/questionnaire_menuitem_edit_field_note"
        android:icon="@drawable/ic_menu_edit_note"
        app:showAsAction="always"
        android:title="@string/menu_questionnaire_edit_field_note">
    </item>
    <item
        android:id="@+id/questionnaire_menuitem_select_style"
        android:title="@string/menu_questionnaire_styles"
        android:visible="false">
    </item>
    <item
        android:id="@+id/questionnaire_menuitem_action_search"
        android:icon="@drawable/ic_menu_cspro_search"
        app:showAsAction="always"
        android:title="@string/searchview_prompt"/>
    <item
        android:id="@+id/questionnaire_menuitem_view_questionnaire"
        android:title="@string/menu_questionnaire_view_questionnaire">
    </item>
    <item
        android:id="@+id/questionnaire_menuitem_help"
        android:title="@string/menu_applications_list_help">
    </item>

</menu>