<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  xmlns:tools="http://schemas.android.com/tools"
  android:orientation="vertical">
    
    <TextView
        android:id="@+id/textview_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/cspro_green"
        tools:text="Login to http://csweb.census.gov" />
    
    <EditText
        android:id="@+id/edittext_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/edittxt_border"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/sync_username_hint"
        android:imeOptions="actionNext"
        android:inputType="textNoSuggestions"
        android:text="" >
    </EditText>
    <EditText
        android:id="@+id/edittext_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/edittxt_border"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/sync_password_hint"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:text="" >
    </EditText>
    
    <TextView
        android:id="@+id/invalid_username_password_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:textColor="@android:color/holo_red_dark" 
        android:text="@string/sync_username_password_invalid"
        android:visibility="gone" />
</LinearLayout>
